<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="32dp"
    android:orientation="horizontal">

    <Button
        android:id="@+id/btnLeft"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/left"
        android:textAllCaps="false"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btnCenter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/center"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:layout_marginHorizontal="8dp"/>

    <Button
        android:id="@+id/btnRight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/right"
        android:textAllCaps="false"
        android:textSize="16sp" />


</LinearLayout>